--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
   <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Roaring Lion">
-  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Roaring Lion", title= "Hear Me Roar">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt= "Roaring Lion" title= "Hear Me Roar">
 </body>
 </html>
